...
            IconButton(
                modifier = Modifier.size(
                    READER_CHROME_CONTROL_SIZE
                ).testTag("reader_search_button"),
                onClick = onSearchRequested
            ) {
                AppIconGraphic(AppIcon.Search, "Search book")
            }
        }
        IconButton(
            modifier = Modifier.size(READER_CHROME_CONTROL_SIZE),
            onClick = onAppearanceRequested
        ) {
...
